<package>

  <name>ur10_robotiq85_moveit_config</name>
  <version>1.0.0</version>
  <description>
     Package with all the configuration and launch files for using the ur10+robotiq85 with the MoveIt Motion Planning Framework
  </description>
  <author>Wisc-HCI</author>
  <maintainer email="todo@todo.todo"></maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/Wisc-HCI/robot_configurations</url>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>robot_description</build_depend>
  <run_depend>robot_description</run_depend>

  <test_depend>roslaunch</test_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
